[metadata]
name = sphinx-docushare
description = Sphinx extension to auto-create links to DocuShare documents
long_description = file:README.rst
long_description_content_type = text/x-rst
author = Ole Streicher
author_email = olebole@debian.org
license = BSD 3-Clause License
url = https://github.com/olebole/sphinx-docushare
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Programming Language :: Python
    Programming Language :: Python :: 3
    Operating System :: OS Independent
    License :: OSI Approved :: BSD License

[options]
zip_safe = False
packages = find:
python_requires = >=3.7
install_requires =
    sphinx>=2
    PyDocuShare@git+https://github.com/tmtsoftware/cont-pydocushare#egg=PyDocuShare
